--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "frontend",
+  "name": "mlacademy-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ace": "^1.3.0",
-    "auth0-js": "^9.8.2",
     "axios": "^0.18.0",
     "brace": "^0.11.1",
-    "marked": "^0.5.2",
+    "grommet": "^2.3.1",
+    "grommet-icons": "^4.1.0",
+    "marked": "^0.6.0",
+    "polished": "^2.3.3",
     "react": "^16.7.0",
     "react-ace": "^6.3.2",
     "react-dom": "^16.7.0",
-    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2",
-    "reactstrap": "^7.0.2",
+    "react-scripts": "2.1.3",
     "styled-components": "^4.1.3"
   },
   "scripts": {
