--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "react": "^16.7.0",
     "react-ace": "^6.3.2",
     "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "terser": "3.14.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "terser": "3.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
