--- a/travis.yml
+++ b/travis.yml
@@ -15,7 +15,7 @@ before_install:
 install: true
 script:
   - 'if [ $TEST_SUITE = "simple" ]; then tasks/e2e-simple.sh; fi'
-  - 'if [ $TEST_SUITE = "installs" ]; then tasks/e2e-installs.sh; fi'
+  - 'if [ $TEST_SUITE = "installs" ]; then tasks/e2e-installs.sh; fi'n
   - 'if [ $TEST_SUITE = "kitchensink" ]; then tasks/e2e-kitchensink.sh; fi'
   - 'if [ $TEST_SUITE = "kitchensink-eject" ]; then tasks/e2e-kitchensink-eject.sh; fi'
   - 'if [ $TEST_SUITE = "old-node" ]; then tasks/e2e-old-node.sh; fi'
