--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grommet": "^2.3.1",
     "grommet-icons": "^4.1.0",
     "polished": "^2.3.3",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-ace": "^6.3.2",
     "react-dom": "^16.7.0",
