--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "eject": "react-scripts eject",
     "now-build": "react-scripts build && mv build dist"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -35,6 +32,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "eslint": "5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.16.4",
     "react-test-renderer": "^16.7.0"
   }
 }
