--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^9.10.0",
     "axios": "^0.18.0",
     "brace": "^0.11.1",
     "grommet": "^2.3.1",
