--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "auth0-js": "^9.10.0",
     "axios": "^0.18.0",
     "brace": "^0.11.1",
+    "firebase": "^5.8.2",
     "grommet": "^2.3.1",
     "grommet-icons": "^4.1.0",
     "polished": "^2.3.3",
@@ -13,6 +14,7 @@
     "react": "^16.7.0",
     "react-ace": "^6.3.2",
     "react-dom": "^16.7.0",
+    "react-notify-toast": "^0.5.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
