--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "mlAcademy",
-  "version": "0.2.0",
+  "name": "fe-test",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "auth0-js": "^9.10.0",
-    "axios": "^0.18.0",
-    "brace": "^0.11.1",
-    "firebase": "^5.8.2",
-    "grommet": "^2.3.1",
-    "grommet-icons": "^4.1.0",
-    "polished": "^2.3.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.0",
-    "react-ace": "^6.3.2",
-    "react-dom": "^16.8.0",
+    "bulma": "^0.7.4",
+    "bulma-extensions": "^6.2.0",
+    "firebase": "^5.8.4",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-helmet": "^5.2.0",
+    "react-hooks-global-state": "^0.7.0",
     "react-notify-toast": "^0.5.0",
-    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3",
-    "terser": "3.14.1"
+    "react-scripts": "2.1.5",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,6 +23,9 @@
     "eject": "react-scripts eject",
     "now-build": "react-scripts build && mv build dist"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -35,14 +33,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.16.4",
-    "react-test-renderer": "^16.7.0"
+    "node-sass": "^4.11.0"
   }
 }
