--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bulma": "^0.7.4",
     "bulma-extensions": "^6.2.0",
     "firebase": "^5.8.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
+    "react-ace": "^6.4.0",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
     "react-hooks-global-state": "^0.7.0",
