--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bulma": "^0.7.4",
     "bulma-extensions": "^6.2.0",
     "firebase": "^5.8.4",
+    "markdown-to-jsx": "^6.9.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-ace": "^6.4.0",
