--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "mlacademy-frontend",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/mlacademy/frontend.git"
+  },
+  "license": "MIT",
   "version": "0.6.7",
   "private": false,
   "dependencies": {
@@ -17,7 +22,8 @@
     "react-notify-toast": "^0.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "typescript": "^3.3.3333"
   },
   "scripts": {
     "start": "react-scripts start",
