--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "firebase": "^5.8.4",
     "markdown-to-jsx": "^6.9.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
+    "react": "^16.8.4",
     "react-ace": "^6.4.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
-    "react-hooks-global-state": "^0.7.0",
     "react-notify-toast": "^0.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "recompose": "^0.30.0",
     "styled-components": "^4.1.3",
     "typescript": "^3.3.3333"
   },
@@ -45,6 +45,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "node-sass": "^4.11.0"
   }
 }
