--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "dependencies": {
     "axios": "^0.18.0",
+    "brace": "^0.11.1",
     "bulma": "^0.7.4",
     "bulma-extensions": "^6.2.0",
     "firebase": "^5.8.4",
