--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "bulma-extensions": "^6.2.0",
     "firebase": "^5.8.4",
     "markdown-to-jsx": "^6.9.1",
+    "msal": "^0.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-ace": "^6.4.0",
+    "react-azure-adb2c": "^0.2.0",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-notify-toast": "^0.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "reactn": "^1.0.0",
     "recompose": "^0.30.0",
     "styled-components": "^4.1.3",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.3333",
+    "yarn": "^1.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -66,7 +70,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier - single-quote - write",
+      "prettier --single-quote --write",
       "git add"
     ]
   }
