--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,5 @@
     "react/forbid-prop-types": false,
     "no-else-return": 0
   },
-  "globals": { "localStorage": true, "fetch": true, "it": true, "document": true }
+  "globals": { "localStorage": true, "window": true, "fetch": true, "it": true, "document": true }
 }
