--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bulma": "^0.7.4",
     "bulma-extensions": "^6.2.0",
     "firebase": "^5.8.4",
+    "hookrouter": "^1.0.0-beta",
     "markdown-to-jsx": "^6.9.1",
     "msal": "^0.2.4",
     "prop-types": "^15.7.2",
@@ -22,7 +23,6 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-notify-toast": "^0.5.0",
-    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "reactn": "^1.0.0",
     "recompose": "^0.30.0",
