--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,10 +10,20 @@
     {
       "src": "favicon.png",
       "sizes": "64x64 32x32 24x24 16x16"
+    },
+    {
+      "src": "logo.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
+      "src": "apple-touch-icon.png",
+      "type": "image/png",
+      "sizes": "256x256"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  "background_color": "#7d4cdb"
 }
