--- a/public/web.config
+++ b/public/web.config
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+    </staticContent>
     <rewrite>
       <rules>
         <rule name="SPA" stopProcessing="true">
-          <match url="^(?!.*(.js|.css|.png|.jpg|.ico|.svg)).*$" />
+          <match url="^(?!.*(.js|.css|.png|.jpg|.ico|.svg|.json)).*$" />
           <conditions logicalGrouping="MatchAll">
           </conditions>
           <action type="Rewrite" url="/"  appendQueryString="true" />
